--- a/style.css
+++ b/style.css
@@ -594,6 +594,7 @@ html {
     background-image: url(https://hblimg.mmtcdn.com/content/hubble/img/collections/m_romantic44_p_540_417.jpg);
     border-radius: 10px;
 }
+
 .album-b {
     background-size: 200px;
     background-image: url(https://hblimg.mmtcdn.com/content/hubble/img/collections/m_honeymoon11_p_540_417.jpg);
@@ -701,6 +702,8 @@ html {
     font-weight: bold;
 }
 
+
+
 .container {
     max-width: 400px;
     min-width: 40p0x;
@@ -716,7 +719,7 @@ html {
 }
 
 .back-card {
-    border-radius: 40px !important;
+    border-radius: 40px;
 }
 
 .city-name {
@@ -799,6 +802,8 @@ html {
     font-weight: 100;
     letter-spacing: -2px;
 }
+
+
 
 .footer {
     height: 10rem;
